# resiprocate

./: Makefile.am  configure.ac  sipxresiprocate.spec.in
apps/clicktocall/: Makefile.am
apps/ichat-gw/: Makefile.am
apps/ichat-gw/jabberconnector/: Makefile.am
reTurn/: Makefile.am
reTurn/client/: Makefile.am
reTurn/client/test/: Makefile.am
reTurn/test/: Makefile.am
reflow/: Makefile.am
repro/: Makefile.am
repro/accountingconsumers/: Makefile.am
repro/reprocmd/: Makefile.am
resip/dum/: Makefile.am  MasterProfile.cxx  ServerSubscription.cxx  ServerSubscription.hxx
resip/dum/test/: Makefile.am
resip/recon/: Makefile.am
resip/recon/MOHParkServer/: Makefile.am
resip/recon/test/: Makefile.am
resip/stack/: Helper.cxx  Makefile.am  MethodHash.cxx  MethodHash.hxx
resip/stack/test/: Makefile.am
rutil/: Makefile.am  Version.cxx  Version.hxx
rutil/dns/ares/: Makefile.am
tfm/: Makefile.am  TestProxy.cxx  TfmDns.hxx
tfm/repro/: CommandLineParser.cxx  Makefile.am  TestRepro.cxx
tfm/tfdum/: Makefile.am
